--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #174580 Add rel=nofollow to back/next links.
 - #322649 Add escaping for %s in date format code.
 - #322446 Avoid extra space in date theme when there is no timezone.
 - #321733 Fix identification of error field for To date that is not greater than From date.
