--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Fix undefined variable in date_ical.inc.
 - Set view->date fields when using date filters as well as date arguments.
 - Fix Date Views argument handling of summary views, and switch to comparing formatted values instead of complete dates so year arguments will work better.
 - Make sure 'time ago' formats will work in calendar by adding more separation into the format_interval formatter.
