--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Get rid of date-clear-block class in case it is affecting the sporatic problems with popups.
 - Clean up admin summary names for the date argument and date filter.
 - #327506 Detect and trap bad timezones in ical import so they don't create errors.
 - Fix broken SQL for week arguments and filters, we can't use DATE_FORMAT(), must look for week start and end.
