--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Add more checks in PHP4 functions to return usable values when we don't have complete timezone information in the PHP4 wrapper.
 - Add helper function to convert input values based on field type.
 - Fix timezone caching -- it was resetting when it didn't need to, consuming resources.
 - Found a better way to generate random timezones using mt_rand() instead of rand() to avoid getting lots of duplicates.
