--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Fix incorrect handling of empty values for multiple value fields, make sure they remain empty.
 - Add more checks in PHP4 functions to return usable values when we don't have complete timezone information in the PHP4 wrapper.
 - Add helper function to convert input values based on field type.
 - Fix timezone caching -- it was resetting when it didn't need to, consuming resources.
