--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #315009 Rework the generation of dates to work right now that the Content module handles repeats.
 - #317057 Make sure existing optional date with empty value doesn't get reset to current date.
 - Fix incorrect handling of empty values for multiple value fields, make sure they remain empty.
 - Add more checks in PHP4 functions to return usable values when we don't have complete timezone information in the PHP4 wrapper.
