--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Another tweak to the repeating date theme to show only the first date in nodes, but show the current date in views.
 - #329102 Fix mistake in README.txt.
 - Set up hook_content_generate to creating random repeating dates as well as regular dates, useful to help debug repeat problems.
 - #322845 Repeating dates with deltas greater than zero were showing no date in Views.
