--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #319452 Make sure repeating date calculations like 'the 5th Sunday' don't prematurely jump to the following period.
 - Fix bug in PHP4 calculation of date_date_set() that was getting the day wrong.
 - Another tweak to the repeating date theme to show only the first date in nodes, but show the current date in views.
 - #329102 Fix mistake in README.txt.
