--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Fix PHP4 timezone problem that didn't save timezone changes correctly in rare cases when refreshing zones using devel.
 - Add 'UNTIL' to the RRULE creation function so it can be used by the API and date_content_generate.
 - Update date_content_generate to find more matches in a more limited period.
 - Make sure repeating date UNTIL date is properly adjusted for timezone.
