Fix logic error in date_convert when using timestamp with timezone other than UTC.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Fix logic error in date_convert when using timestamp with timezone other than UTC.
 - #336255 Fix a few remaining places where timezone=none was not being handled correctly, and add update to clean up incorrect values stored in database.
 - Eliminate date_timezone_convert() which wasn't working correctly to adjust dates without timezones and get rid of hard-coded 'UTC' for database values in favor of consistently using date_get_timezone_db().
 - Date sql handler wasn't properly setting db timezone to UTC for mysql databases.
