--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #301279 Remove README.txt for Date Popup, it's out of date and I'm moving documentation into the d.o handbook and Advanced Help.
 - #337075 Change background-color:none to background-color:transparent.
 - #324756 Bypass validation for empty, non-required dates.
 - Fix broken Date API test broken by change in API.
