--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Add date_increment_round() to date_content_generate to make sure generated dates match increment settings.
 - Move Date repeat form help to Advanced Help instead of using collapsed fieldset.
 
 Version 6.2-rc6
