--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Adapt Date Argument/Date Browser code to work correctly if only a period is used.
 - #324063 Remove unneeded break.
 - #320596 Add hook to date_api_fields() so custom modules can add date fields to the Date argument and filter.
 - #341964 Get missing back/next links back in year.
