--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Add ability to analyze a period to period argument, like P1M--P1Y.
 - Adapt Date Argument/Date Browser code to work correctly if only a period is used.
 - #324063 Remove unneeded break.
 - #320596 Add hook to date_api_fields() so custom modules can add date fields to the Date argument and filter.
