--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #343190 Add validity testing to date_api_ical_build_rrule().
 - #307166 Make sure timestamps with missing granularity parts in select widgets get defaulted to empty values and saved correctly.
 - #341203 Make sure there is no SQL error if there are no fields.
 - Add ability to analyze a period to period argument, like P1M--P1Y.
