--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Date input and display formats were not properly defaulting to the site default values.
 - Improve the template and css for the exposed date filter to keep date parts lined up next to each other.
 - Fix handling for fixed date default value in date filter.
 - Get rid of DURATION time part details in iCal array, we only need the DATA and DURATION.
