--- a/date_copy/translations/date_copy.de.po
+++ b/date_copy/translations/date_copy.de.po
@@ -8,15 +8,17 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2008-09-06 16:20-0500\n"
-"PO-Revision-Date: 2008-12-14 23:53+0100\n"
+"PO-Revision-Date: 2008-12-16 13:33+0100\n"
 "Last-Translator: Alexander Haß\n"
-"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"X-Poedit-Language: German\n"
+"X-Poedit-Country: GERMANY\n"
 
 #: date_copy.module:87;149
 msgid "There are no date fields in this database to import the data into. Please add a date field to the desired node types and be sure to indicate it uses both a \"from\" and a \"to\" date."
