--- a/date/translations/date.de.po
+++ b/date/translations/date.de.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2008-12-16 22:14+0100\n"
-"PO-Revision-Date: 2008-12-17 01:06+0100\n"
+"PO-Revision-Date: 2008-12-17 01:39+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -399,7 +399,7 @@ msgstr "Auswahlliste"
 
 #: date/date.module:141
 msgid "Select List with Repeat options"
-msgstr ""
+msgstr "Auswahlliste mit Terminserienoptionen"
 
 #: date/date.module:149
 msgid "Text Field with custom input format"
