--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #348375 Add missing php tags in template.
 - #347878 Translation fixes.
 - Add new module 'Date tools' with date wizard to easily create a simple date content type with an auto-configured related calendar.
 - #313704 Make sure date db timezone does not get removed before token handling.
