--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #346752 Add RTL css code.
 - #324290 Don't validate when $items is empty.
 - #348375 Add missing php tags in template.
 - #347878 Translation fixes.
